# hh

./: .envrc  .gitignore  .sops.yaml  NIXOS.md  README.md  flake.nix  index.md
infra/machines/laptop/: disko-scope.nix  scope.nix
infra/machines/laptop/nixos-modules/: depot-deploy-home.nix  depot-deploy-machine.nix  depot-sync.nix  desktop.nix  nix-settings.nix  power.nix  ssh.nix  tailscale.nix  user.nix  wifi.nix
infra/machines/laptop/secrets/: .gitkeep
tools/deploy/: Cargo.toml  default.nix
tools/deploy/src/: main.rs
users/hh/home/machines/: scope.nix
users/hh/home/modules/: default-imports.nix  git.nix  hyprland.nix  neovim.nix  pkgs.nix  tmux.nix  zsh.nix
users/hh/home/themes/: firewatch.nix
users/hh/keys/: default.nix
