[package]
name = "deploy"
version = "0.1.0"
edition = "2021"
description = "Deploy tool for managing depot sync and deployments"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
